[package]
name = "iced_charts_lib"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.iced]
git = "https://github.com/hecrj/iced"
branch = "master"
features = ["canvas", "tokio", "debug"]
